[package]
name = "solana-cli-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bs58 = "0.5.1"
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
solana-client = "2.1.1"
solana-sdk = "2.1.1"
tokio = { version = "1.41.1", features = ["full"] }
