[package]
name = "solana-cli-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bip39 = "2.1.0"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
solana-client = "2.1.1"
solana-sdk = "2.1.1"
spl-associated-token-account = "6.0.0"
tokio = { version = "1.41.1", features = ["full"] }
